--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ section {
     margin: 20px auto;
     width: 1024px;
     background-color: #ffffff;
-    box-shadow: 10px 10px 19px 10px rgb(132 220 198 / 40%);
+    box-shadow: 10px 10px 19px 10px var(--secondary-bg-color);
 
 }
 
@@ -78,6 +78,13 @@ flex-direction: row;
     color: var(--third-text-color);
     max-width: 250px;
     padding: 25px;
+}
+
+.right-part {
+    margin-left: 30px;
+    margin-right: 40px;
+    padding: 0 25px 0 25px;
+    color: var(--primary-text-color);
 }
 
 .main-img {
@@ -144,6 +151,81 @@ flex-direction: row;
     margin-top: 15px;
 }
 
+.navigation {
+    margin-top: 60px;
+    margin-bottom: 40px;
+}
+
+.navigation-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.navigation-list-item {
+    font-weight: bolt;
+    font-size: 18px;
+    line-height: 1.14;
+
+}
+
+.navigation-link {
+    padding: 15px 10px;
+    background-color: var(--secondary-bg-color);
+    border-radius: 10px;
+}
+
+.info .second-title,
+.experience .second-title,
+.education .second-title,
+.examples .second-title {
+    text-align: left;
+    border-bottom: none;
+    margin-bottom: 15px;
+}
+
+.experience-list-item:not(:last-child) {
+    margin-bottom: 15px;
+}
+
+.experience-link {
+    color:var(--primary-text-color);
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.14;
+}
+
+.experience-link:hover {
+font-weight: 700;
+text-shadow: #95A3B3 1px 0 10px;
+}
+
+.experience-list-description {
+    margin-top: 10px;
+    padding-left: 20px;
+}
+
+.education-list-item:not(:last-child) {
+margin-bottom: 10px;
+}
+
+.education-list-year {
+font-weight: 400;
+font-size: 16px;
+line-height: 1;
+}
+
+.education-list-position {
+    font-weight: bold;
+    font-style: italic;
+    font-size: 16px;
+    line-height: 1.14;
+}
+
+.examples-code {
+    font-size: 12px;
+}
+
 .cv-footer {
         display: flex;
         flex-direction: row;
@@ -153,4 +235,8 @@ flex-direction: row;
         padding-bottom: 30px;
         color: var(--third-text-color);
         background-color: #faea68;
+}
+
+.footer-link:hover {
+    color: var(--primary-text-color);
 }
